src/test/deca/syntax/invalid/homemade/test/test_lex_inv_chaine_non_fermee.deca
// Test pour une chaine non fermée
{
    "chaine non fermee
}